--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -48,6 +48,7 @@ pt-BR:
         frequency: Periodicidade
         description: Descrição
         slug: Sigla
+        bind_withdraw: Vincular a desembolso
       transaction_item:
         value: Valor
         value_brl: Valor (BRL)
@@ -55,6 +56,7 @@ pt-BR:
         exchange_rate: Taxa de conversão
         internalization_date: Data de internalização
         confirmed: Confirmar
+        formula: Fórmula
       currency:
         name: Nome
         formula: Fórmula
